After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692238 - sound: fix styling for GvcBalanceBar
sound: fix styling for GvcBalanceBar
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sound
unspecified
Other All
: Normal normal
: ---
Assigned To: Control center sound maintainer(s)
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-21 21:05 UTC by Cosimo Cecchi
Modified: 2013-01-22 15:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sound: remove old GTK2 styling code (1.31 KB, patch)
2013-01-21 21:06 UTC, Cosimo Cecchi
committed Details | Review
sound: set has-origin = FALSE for the balance bar scale (1.03 KB, patch)
2013-01-21 21:06 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2013-01-21 21:05:59 UTC
Now that Adwaita renders a background fill for scales that set has_origin = TRUE, it turns out the scale we use for the stereo balance sets an origin too, which looks odd.
Comment 1 Cosimo Cecchi 2013-01-21 21:06:01 UTC
Created attachment 234047 [details] [review]
sound: remove old GTK2 styling code

gtk_rc_parse_string() doesn't do anything these days, and we don't need
a name on the widget anymore.
Comment 2 Cosimo Cecchi 2013-01-21 21:06:03 UTC
Created attachment 234048 [details] [review]
sound: set has-origin = FALSE for the balance bar scale

The scale here is used for Left<->Right, so it doesn't have an origin.
Comment 3 Bastien Nocera 2013-01-22 06:39:47 UTC
Review of attachment 234047 [details] [review]:

Looks good.
Comment 4 Bastien Nocera 2013-01-22 06:43:11 UTC
Review of attachment 234048 [details] [review]:

++
Comment 5 Cosimo Cecchi 2013-01-22 15:02:03 UTC
Attachment 234047 [details] pushed as 9b0a509 - sound: remove old GTK2 styling code
Attachment 234048 [details] pushed as 0a083ca - sound: set has-origin = FALSE for the balance bar scale