sound: remove old GTK2 styling code

gtk_rc_parse_string() doesn't do anything these days, and we don't need
a name on the widget anymore.

https://bugzilla.gnome.org/show_bug.cgi?id=692238